# aws-lambda-cpp

./: README.md
.github/workflows/: code-quality.yml  deploy-infra.yml  integration-tests.yml  release.yml  tests.yml  workflow.yml
ci/integ/: README.md  assert.sh  install-deps.sh  invoke-and-assert.sh  invoke.sh  package-zip.sh  run-zip-integ.sh  unit-test.sh
ci/integ/docker/: Dockerfile.al2023  Dockerfile.alpine  Dockerfile.arch  Dockerfile.ubuntu
include/aws/http/: response.h
include/aws/lambda-runtime/: runtime.h
include/aws/logging/: logging.h
infra/: package-lock.json  package.json  tsconfig.json
infra/lib/: codebuild-runners-stack.ts
packaging/: packager
src/: logging.cpp  runtime.cpp
tests/: CMakeLists.txt  no_op_test.cpp
tests/resources/: CMakeLists.txt  lambda_function.cpp
tests/snapshots/: crash_backtrace.expected_contains  echo_failure.expected  echo_success.expected  echo_unicode.expected
tests/unit/: thread_local_curl_test.cpp  unit_tests.cpp
